# SignalCore

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  GEMINI.md  MANIFEST.sha256  README.md  SECURITY.md  adaptive-context-output.json  codemeta.json  gemini-extension.json  llms.txt  package.json  pyproject.toml  release-smoke.json  windows-roblox-diagnostic.txt
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  branch-consolidation-audit-trigger.txt  branch-consolidation-cleanup-trigger.txt  copilot-instructions.md  dependabot.yml  security-alert-final-verification.trigger  security-alert-verification.trigger  syntavra-final-cleanup-trigger.txt  syntavra-unification-complete-trigger.txt  syntavra-unification-final-pass-trigger.txt  syntavra-unification-final-trigger.txt  syntavra-unification-final2-trigger.txt  syntavra-unification-final3-trigger.txt  syntavra-unification-final4-trigger.txt  syntavra-unification-final5-trigger.txt  syntavra-unification-trigger  syntavra-unification-trigger-v5
.signalcore-bootstrap/: dispatch-help.txt  dispatch-marker  dispatch-request  patch-000  patch-002  patch-002a.b64  patch-002b.b64  patch-003  patch-004  patch-005  patch-007  patch-008  patch-009  patch-011  patch-012  patch-014  patch-015a.b64  patch-015b.b64  patch-017a.b64  patch-017b.b64  patch-018  patch-018b.b64  patch-018b2.b64  workflow-status.md
.signalcore-direct/: diagnostic.txt  payload-01.b64  payload-02.b64  payload-03.b64  payload-05.b64  payload-06.b64  payload-08.b64  payload-09.b64  payload-10.b64  (+9 more)
(+346 files in other folders)
